# smarthome

./: .gitignore  CMakeLists.txt  GasDetector.cpp  GasDetector.h  README.md  msh
docs/: Faraz_Camera_Security.md  Nazanin_Light_TV_Sound.md
src/: Alarm.cpp  Alarm.h  Camera.cpp  Camera.h  CinemaMode.cpp  CinemaMode.h  DetectorFactory.cpp  DetectorFactory.h  Device.cpp  Device.h  DeviceManager.cpp  DeviceManager.h  EveningMode.cpp  EveningMode.h  GasDetector.cpp  GasDetector.h  HighPerformanceState.cpp  HighPerformanceState.h  LGTV.cpp  LGTV.h  Light.cpp  Light.h  Logger.cpp  Logger.h  LowPowerState.cpp  LowPowerState.h  MSHController.cpp  MSHController.h  MenuFacade.cpp  MenuFacade.h  ModeStrategy.cpp  ModeStrategy.h  NormalMode.cpp  NormalMode.h  NormalState.cpp  NormalState.h  Observer.cpp  Observer.h  PartyMode.cpp  PartyMode.h  (+19 more)
